# winsock

./: BUILD.md  CMakeLists.txt  README.md  __build.cpp
include/: assist_network.h
src/: CMakeLists.txt  assist_network.cpp  main.cpp
